--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <!--Style-->
 <link rel="stylesheet" href="css/style.css">
 
-<!--JS-->
-    <script defer src="js/script.jss"></script>
 </head>
 <body>
     <button id="button" class="btn btn-primary">Tira i dadi</button>
  <div id="result"></div>
+
+
+ <!--JS-->
+ <script src="js/script.js"></script>
 </body>
 </html>
