--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
  <div id="result"></div>
 
 
+
+ <!-- Esercizio 2-->
+
+ <div>
+    <input id="input" type="text" class="form-control" placeholder="Inserisci la mail">
+    <button id="buttonMail" class="btn btn-primary">Entra</button>
+ </div>
+
+ <div id="resultMail"></div>
+
  <!--JS-->
  <script src="js/script.js"></script>
 </body>
